# ghost_in_the_machine

./: .gitignore  README.md  pyproject.toml
notebooks/: analysis.ipynb  analysis.py
src/: data_ingestion.py  feature_engineering.py  inference.py  modeling.py  visualization.py
