[tool.poetry]
name = "ghost-in-the-machine"
version = "0.1.0"
description = "IPL Auction Analytics: Quantifying Killer Instinct"
authors = ["Your Name"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^1.26"
torch = "^2.5.0"
matplotlib = "^3.9.2"
xlrd = "^2.0.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
